[package]
name = "site"
version = "0.1.0"
authors = ["jacobmidtlyng"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-router = "0.2.7"
actix-web = "3"
chrono = "0.4"
config = "0.10.1"
glob = "0.3.0"
quote = "1.0"
sailfish = "0.3.3"
serde = { version = "1", features = ["derive"]}
tracing = "0.1.22"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }

[dev-dependencies]
lazy_static = "1.4.0"
reqwest = "0.10"
tokio = "0.2.24"